detalhes e editar usuário

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -45,13 +45,13 @@
                 <br>
                 <ul class="side nav flex-column nav-pills">
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="{% url 'user:detail_user' user.pk %}">Usuário</a>
+                    <a class="pure-menu-heading" href="{% url 'usuario:editar_usuario' user.pk %}">Usuário</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="{% url 'profile:list_user_profile' %}">Perfil</a>
+                    <a class="pure-menu-heading" href="">Perfil</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="{% url 'pets:list_pets_user' %}">Pets</a>
+                    <a class="pure-menu-heading" href="">Pets</a>
                     </li>
                     <li class="pure-menu-heading">
                     <a class="pure-menu-heading" href="#">Outros</a>
