--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 </li>
                 {% if user.is_superuser %}
                 <li class="nav-item">
-                    <a class="nav-link" href="">Users</a>
+                    <a class="nav-link" href="{% url 'usuario:listar_usuarios_admin' %}">Users</a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
