--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -48,16 +48,16 @@
                     <a class="pure-menu-heading" href="{% url 'usuario:editar_usuario' user.pk %}">Usuário</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="">Perfil</a>
+                    <a class="pure-menu-heading" href="{% url 'account_change_password' %}">Senha</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="">Pets</a>
+                    <a class="pure-menu-heading" href="">Outros</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="#">Outros</a>
+                    <a class="pure-menu-heading" href="">Outros</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="#">Outros</a>
+                    <a class="pure-menu-heading" href="">Outros</a>
                     </li>
                 </ul>
                 <br>
