direcionar após confirmação de email

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -32,7 +32,7 @@
             <ul class="breadcrumb" style="border: 1px solid rgba(0,0,0,.125); background-color:#212529">
             {% block breadcrumb %} 
             <div style="color: white;">
-                <h4 >Painel do usuário <h1>{{ user.username }}</h1></h4>
+                <h4 >Painel do usuário <h1>{{ user.email }}</h1></h4>
             {% endblock %}
             </div>
             </ul>
