ajustes formulários pf/pj

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -51,7 +51,7 @@
                     <a class="pure-menu-heading" href="{% url 'account_change_password' %}">Senha</a>
                     </li>
                     <li class="pure-menu-heading">
-                    <a class="pure-menu-heading" href="">Outros</a>
+                    <a class="pure-menu-heading" href="{% url 'usuario:destalhes_usuario' user.pk %}">Perfil</a>
                     </li>
                     <li class="pure-menu-heading">
                     <a class="pure-menu-heading" href="">Outros</a>
