--- a/templates/usuario/detalhes_usuario.html
+++ b/templates/usuario/detalhes_usuario.html
@@ -15,7 +15,7 @@
     <div class="card">
         <div class="card-body">
             <table>
-                <h3 class="title">email: {{ object.email }}</h3>
+                <h3 class="title">email: {{ usuario.email }}</h3>
                 <hr>
             </table>
             <legend>Editar</legend>
@@ -24,6 +24,11 @@
         </div>
     </div>
 </div>
+
+
+{% block perfil %}
+{% endblock perfil %}
+
 
 {% endblock dashboard %}
                 
