--- a/templates/usuario/detalhes_perfil.html
+++ b/templates/usuario/detalhes_perfil.html
@@ -1,41 +1,50 @@
-{% extends 'account/dashboard.html' %}
+{% extends 'usuario/detalhes_usuario.html' %}
 
+<head>
+    <link rel="stylesheet" type="text/css" href="static/_css/estilo.css"/>
+    <link rel="stylesheet" type="text/css" href="static/_css/form.css">
+</head>
 
-{% block title %}Perfil{% endblock title %}
-
-{% block dashboard %}
+{% block perfil %}
 <div class="container" style='margin-top:2px'>
     <div class="card">
-        <div>
-            <div class="container">
-                <div>
-                    <h6 class="font-weight mt-3">Dados do Perfil</h6>
-                    Email: {{ object.user.email }}
-                    Pessoa {{ object.user.pessoa }}
-                    <hr>
-                    <h5>Nome: {{ object.name }}     /     CPF: {{ object.cpf_cnpj }}     /     RG: {{ object.celular }}</h5><br> 
-                </div>
-                <div>
-                    <h6 class="font-weight mt-3">Endereço</h6>
-                    <hr>
-                    <h5>Cep: {{ object.cep }}</h5>
-                    <h5><p>Av.: {{ object.endereco }} / 
-                    Nº: {{ object.numero }} / Compl.: --- </p>
-                    <p>Cidade: {{ object.cidade }} / {{ object.estado }}</p><h5><br> 
-                </div>
-                    <div>
-                    <h6 class="font-weight mt-3">Situação cadastral</h6>
-                    <hr>
-                    <h5><p>Situação: {{ object.situacao }}</p>
-                    <p>Daldos alterado em : {{ object.atualizadoem|datetime }}</p></h5><br> 
-                </div>
-                <div>
-                    <a href="{% url 'profile:edit_profile' object.pk %}" class='btn btn-primary'>Editar</a>
+        <div class="container">
+        <h1>Perfil do Usuário</h1>
+        <form>
+            <fieldset id='pessoais'><legend>Dados Pessoais<label>
+                <h6 class="font-weight mt-3">Dados do Perfil</h6>
+                Email: {{ object.user.email }} {{ object.email }}
+                Pessoa {{ object.user.pessoa }}
+                <hr>
+                {% if object.user.pessoa == 'PF' %}
+                <h5>Nome: {{ object.name }}     /     CPF: {{ object.cpf_cnpj }} </h5><br>
+                {% else %}
+                <h5>Razão Social: {{ object.name }}     /     CNPJ: {{ object.cpf_cnpj }}</h5><br>
+                {% endif %}
+                <h5> Celular: {{ object.celular }}</h5>
+            </fieldset>
+            <fieldset id='endereco'><legend>Endereço<label>
+                <h6 class="font-weight mt-3"></h6>
+                <hr>
+                <h5>Cep: {{ object.cep }}</h5>
+                <h5><p>Av.: {{ object.endereco }} / 
+                Nº: {{ object.numero }} / Compl.: --- </p>
+                <p>Cidade: {{ object.cidade }} / {{ object.estado }}</p><h5><br> 
+            </fieldset>
+                
+            <fieldset id='sit_cadastral'><legend>Situação Cadastral<label>
+                <h5><p>Situação: {{ object.situacao }}</p>
+                <p>Daldos alterado em : {{ object.atualizadoem|date }}</p></h5><br> 
+            </fieldset>
+                
+            <fieldset id=''><legend><label>
 
-                </div>
-            </div>
-            <br>
+            </fieldset>
+        </form>
+
+        <div>
+        <a href="" class='btn btn-primary'>Editar</a>
         </div>
     </div>
 </div>
-{% endblock dashboard %}
+{% endblock perfil %}
