--- a/templates/account/socialaccount/signup.html
+++ b/templates/account/socialaccount/signup.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 
+
+
+
 {% load crispy_forms_tags %}
 
 {% block title %}Cadastrar{% endblock %}
 
+
+
 {% block content %}
+
 
 <div class="conteiner-fluid">
     <div class="container">
@@ -19,14 +25,16 @@
                     <button class="btn btn btn-primary" type="submit" href="">Criar Conta</button>
                     <br>
                 </form>
+                <hr>
                     ---------------- ou ----------------
                 <br>
-                <a href="{ provider_login_url 'google' %}" type="button" aria-pressed="true">
+                <a title="Google" class="socialaccount_provider google" href="/accounts/google/login/?process=login">
                 <img src="https://img.icons8.com/fluent/50/000000/gmail.png"/></a>
-
             </div>
         </div>
     </div>
 </div>
+
+
 {% endblock content %}
 
